# pokemon_classifier_using_vision_transformer

./: LICENSE  README.md  pyproject.toml  setup.py  train.py  train_config.yaml
configs/: __init__.py  data_config.py  path_config.py  train_config.py  train_config.yaml
notebooks/: EDA.ipynb
src/: __init__.py
src/data/: __init__.py  make_dataset.py
src/models/: ViT.py  __init__.py  train_eval.py
src/visualization/: __init__.py  visualize.py
